# web-dev-sampler-rust

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
db/: db.sql  setup_db.sh
public/: static.html
src/: main.rs
src/routes/: about.rs  get.rs  hello.rs  hello_static.rs  mod.rs  parse.rs  post.rs  signup.rs
tests/: about.rs  get.rs  hello_static.rs  hello_world.rs  parse.rs  post.rs  signup.rs
