[package]
name = "web_sampler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_sampler"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
sanitize_html = "0.7.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-actix", "runtime-actix-native-tls"] }
uuid = { version = "1.1.2", features = ["v4"] }
